nlpi_integration_corrections